# elo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
elo_viz/: __init__.py  constants.py  elo.py  matches.py  player.py  rating.py
