[tool.poetry]
name = "elo-viz"
version = "0.0.1"
description = "Elo python package to simulate matches between players, and compare their elo ratings after each match, and visualize it."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
